fix wechat layout bug

--- a/Resume/index.css
+++ b/Resume/index.css
@@ -4,12 +4,14 @@
 
 html,
 body {
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
 
 body {
   margin: 0;
   position: relative;
   overflow: hidden;
+  height: 100%;
   width: 100%;
   letter-spacing: 2px;
   line-height: 1.35;
